package Sdonaciones.dominio.bien;

public enum UnidadMedida {
    KILOGRAMOS,
    UNIDADES,
    LITROS,
    CAJAS
}
