package Sdonaciones.dominio.donante;
public enum Genero {
    MASCULINO,
    FEMENINO,
    NO_BINARIO,
    PREFIERO_NO_DECIR
}