package Sdonaciones.dominio.donante;

public enum TipoPersonaJuridica {
    GUBERNAMENTAL,
    ONG,
    EMPRESA,
    INSTITUCION
}
