package Sdonaciones.dominio.necesidad;

import Sdonaciones.dominio.categoria.Subcategoria;

import java.time.LocalDate;

public class NecesidadRecurrente extends Necesidad {
    private Periodo periodo;
    private int cantidadRecibidaEnPeriodo;

    public NecesidadRecurrente(
            String descripcion,
            Subcategoria subcategoria,
            int cantidadObjetivo,
            Periodo periodo,
            LocalDate fechaInicioPeriodo
    ) {
        super(descripcion, subcategoria, cantidadObjetivo);

        this.periodo = periodo;
        this.periodo.setInicioPeriodo(fechaInicioPeriodo);
        this.cantidadRecibidaEnPeriodo = 0;
    }

    @Override
    public void recibirBienes(int cantidad) {

        // si el período ya venció, reinicia el conteo
        if (!periodoVigente()) {
            reiniciarPeriodo();
        }

        this.cantidadRecibidaEnPeriodo += cantidad;

        // mantiene también el acumulado general
        super.recibirBienes(cantidad);
    }

    public boolean periodoVigente() {

        LocalDate finPeriodo =
                periodo.getInicioPeriodo().plusDays(periodo.getPeriodoDias());

        return !LocalDate.now().isAfter(finPeriodo);
    }

    private void reiniciarPeriodo() {

        this.cantidadRecibidaEnPeriodo = 0;
        this.periodo.setInicioPeriodo(this.periodo.getInicioPeriodo().plusDays(periodo.getPeriodoDias()));
    }
    public LocalDate getSatisfechaEn(){
        return LocalDate.now();
    }
    @Override
    public boolean estaSatisfecha() {

        return periodoVigente()
                && cantidadRecibidaEnPeriodo >= getCantidadObjetivo();
    }

    public Periodo getPeriodo() {return periodo;}
    public void setPeriodo(Periodo periodo) {this.periodo = periodo;}

    public LocalDate getFechaInicioPeriodo() {
        return periodo.getInicioPeriodo();
    }

    public void setFechaInicioPeriodo(LocalDate fechaInicioPeriodo) {
        this.periodo.setInicioPeriodo(fechaInicioPeriodo);
    }

    public int getCantidadRecibidaEnPeriodo() {
        return cantidadRecibidaEnPeriodo;
    }

    public void setCantidadRecibidaEnPeriodo(int cantidadRecibidaEnPeriodo) {
        this.cantidadRecibidaEnPeriodo = cantidadRecibidaEnPeriodo;
    }
}